# FastAPI-Template

./: .dockerignore  .env  .env.debug_example  .env.production_example  .gitignore  Dockerfile  README.md  README_zh.md  main.py  pyproject.toml  settings.yaml.example
app/: main.py
app/api/: __init__.py  main.py
app/api/v1/: main.py  schemas.py
app/api/v1/demo/: main.py
app/api/v1/example/: __init__.py  example.py
app/core/: __init__.py  dependencies.py  logger.py  logging.py  service_registry.py  settings.py
app/core/shared/: store_cleanup.py  tmpfile_cleanup.py
app/lifespan/: main.py
app/middleware/: exception.py  exceptions.py  logging.py
app/service/: __init__.py
app/service/database/: __init__.py  engine.py  session.py
app/service/openai_client/: __init__.py  main.py
app/service/shared/: cleanup.py
app/service/store/: __init__.py  main.py
app/service/temp_file/: __init__.py  main.py
app/services/: __init__.py  base.py
app/services/async_generator_example/: __init__.py  main.py
app/services/database/: __init__.py  main.py
app/services/semaphore/: __init__.py  main.py
app/services/store/: __init__.py  _callback_engine.py  _callback_pipeline.py  _exclusive_locking.py  _runtime.py  _runtime_dispatch.py  _sizing.py  _storage_path.py  _types.py  main.py
app/services/temp_file/: __init__.py  _file_ops.py  _filename.py  _metadata.py  _reconciler.py  _runtime.py  _runtime_dispatch.py  main.py
app/services/transient_example/: __init__.py  main.py
docs/: exception_handling.md
tests/: conftest.py  test_app.py  test_database.py  test_database_service.py  test_lifespan.py  test_logger.py  test_middleware.py  test_openai_client_service.py  test_service_auto_registry.py  test_service_container.py  test_store.py  test_store_service.py  test_temp_file.py  test_temp_file_service.py
tests/api/v1/: test_demo.py
