[project]
name = "fastapi-template"
version = "0.1.0"
description = "Production-ready FastAPI template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.5,<1.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "granian[pname, reload, uvloop, winloop]>=2.5.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.3.2",
    "zlmdb>=23.1.1",
    "cbor2>=5.6.0",
    "filelock>=3.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "B008", # Allow DI/require calls in default arguments (FastAPI and service registry pattern)
]

[tool.mypy]
python_version = "3.12"
files = [
    "app/**/*.py",
    "tests/**/*.py",
]
follow_imports = "skip"
show_error_codes = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
