[project]
name = "fastapi-template"
version = "0.1.0"
description = "Production-ready FastAPI template with FastAPIEx DI/settings, KV store, temp-file manager, logging, and error handling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "cbor2>=5.8.0",
    "fastapi>=0.121,<1.0",
    "fastapiex-di>=2.1.2",
    "fastapiex-settings>=0.0.5",
    "granian>=2.7.2",
    "greenlet>=3.3.0",
    "loguru>=0.7.3",
    "openai>=2.8.0",
    "orjson>=3.11.5",
    "portalocker>=3.2.0",
    "sqlalchemy>=2.0.44",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "winloop>=0.3.0; sys_platform == 'win32'",
    "zlmdb>=25.12.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
fastapi-template = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
